# terminal

./: README.md
crates/: Cargo.toml
crates/fangyi_shell_ffi/: Cargo.toml
crates/fangyi_shell_ffi/fangyi_shell_ffi.xcodeproj/: project.pbxproj
crates/fangyi_shell_ffi/fangyi_shell_ffi.xcodeproj/xcuserdata/southorange.xcuserdatad/xcschemes/: xcschememanagement.plist
crates/fangyi_shell_ffi/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
crates/fangyi_shell_sqlite/: Cargo.toml
crates/fangyi_shell_ssh/: Cargo.toml
crates/fangyi_shell_ssh/src/: lib.rs
crates/terminal_ffi/: Cargo.toml
crates/terminal_ssh/: Cargo.toml
crates/terminal_ssh/src/: bridge_generated.io.rs  bridge_generated.rs  lib.rs  test.rs
crates/terminal_ssh/terminal_ssh.xcodeproj/: project.pbxproj
crates/terminal_ssh/terminal_ssh.xcodeproj/project.xcworkspace/xcuserdata/southorange.xcuserdatad/: UserInterfaceState.xcuserstate
crates/terminal_ssh/terminal_ssh.xcodeproj/xcuserdata/southorange.xcuserdatad/xcschemes/: xcschememanagement.plist
rust-lib/terminal_ssh/: Cargo.toml
scripts/: bind_gen.sh  build_bin.sh
terminal_flutter/: README.md  pubspec.yaml
terminal_flutter/android/app/: build.gradle
terminal_flutter/ios/Runner/: bridge_generated.h
terminal_flutter/ios/Runner.xcodeproj/: project.pbxproj
terminal_flutter/lib/: main.dart
terminal_flutter/lib/bridge/: bridge_generated.dart
terminal_flutter/lib/ffi/: load.dart  rust_ffi.dart
terminal_flutter/linux/: CMakeLists.txt
terminal_flutter/web/: index.html
terminal_flutter/windows/: CMakeLists.txt
(+10 files in other folders)
