[package]
name = "terminal_ssh"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminal_ssh"
crate-type = ["cdylib","staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.77.1"

[build-dependencies]
flutter_rust_bridge_codegen = "1.77.1"
